--- a/config.toml
+++ b/config.toml
@@ -10,3 +10,5 @@ hosts = [
     "http://10.0.240.31:20057", "http://10.0.240.31:20157", "http://10.0.240.31:20257",
     "http://10.0.240.32:20057", "http://10.0.240.32:20157", "http://10.0.240.32:20257",
 ]
+
+chain-id = "okexchain-66"
