FINISH: mnemonics and address file

--- a/config.toml
+++ b/config.toml
@@ -1,14 +1,18 @@
+#hosts = [
+#    "http://10.0.240.23:20057", "http://10.0.240.23:20157", "http://10.0.240.23:20257",
+#    "http://10.0.240.24:20057", "http://10.0.240.24:20157", "http://10.0.240.24:20257",
+#    "http://10.0.240.25:20057", "http://10.0.240.25:20157", "http://10.0.240.25:20257",
+#    "http://10.0.240.26:20057", "http://10.0.240.26:20157", "http://10.0.240.26:20257",
+#    "http://10.0.240.27:20057", "http://10.0.240.27:20157", "http://10.0.240.27:20257",
+#    "http://10.0.240.28:20057", "http://10.0.240.28:20157", "http://10.0.240.28:20257",
+#    "http://10.0.240.29:20057", "http://10.0.240.29:20157", "http://10.0.240.29:20257",
+#    "http://10.0.240.30:20057", "http://10.0.240.30:20157", "http://10.0.240.30:20257",
+#    "http://10.0.240.31:20057", "http://10.0.240.31:20157", "http://10.0.240.31:20257",
+#    "http://10.0.240.32:20057", "http://10.0.240.32:20157", "http://10.0.240.32:20257",
+#]
+
 hosts = [
-    "http://10.0.240.23:20057", "http://10.0.240.23:20157", "http://10.0.240.23:20257",
-    "http://10.0.240.24:20057", "http://10.0.240.24:20157", "http://10.0.240.24:20257",
-    "http://10.0.240.25:20057", "http://10.0.240.25:20157", "http://10.0.240.25:20257",
-    "http://10.0.240.26:20057", "http://10.0.240.26:20157", "http://10.0.240.26:20257",
-    "http://10.0.240.27:20057", "http://10.0.240.27:20157", "http://10.0.240.27:20257",
-    "http://10.0.240.28:20057", "http://10.0.240.28:20157", "http://10.0.240.28:20257",
-    "http://10.0.240.29:20057", "http://10.0.240.29:20157", "http://10.0.240.29:20257",
-    "http://10.0.240.30:20057", "http://10.0.240.30:20157", "http://10.0.240.30:20257",
-    "http://10.0.240.31:20057", "http://10.0.240.31:20157", "http://10.0.240.31:20257",
-    "http://10.0.240.32:20057", "http://10.0.240.32:20157", "http://10.0.240.32:20257",
+    "http://localhost:26657",
 ]
 
-chain-id = "okexchain-66"
+chain-id = "okexchainevm-8"
