FINISH: keeper init log

--- a/x/monitor/shares-control/config.toml
+++ b/x/monitor/shares-control/config.toml
@@ -96,4 +96,28 @@ worker_infos = [
     "okexchain12vwur75mre69sw7w05r48faw6eak0q64gtk0dw,897",
     "okexchain14rjxnzjpwlt5zfwmhh4u9cy2e9e5fm60w4jy2q,898",
     "okexchain14fx9p8nk5u25tzspjxdzc492ccz2jly2tf2c4p,899",
+    "okexchain1etd6ynenv0uuzdchzwcq72xkgrysq45ylx3k20,900",
+    "okexchain1hej6n80vs262wmrpvmkf9zmugqgjfqzydxa8et,901",
+    "okexchain1mcut93efcpdjgjkpfvemfvvqju0zs8ccj3u0xh,902",
+    "okexchain1wc49x2rnml97d537vsv4wqj0e67y90xe0y4nzm,903",
+    "okexchain1992paeg9p7v4kkvqkp6qynk7ujy3220gw7l9ps,904",
+    "okexchain10gclna4ds064tpxq74s3jfyyjvnylkdkjftvyd,905",
+    "okexchain1u56l3ehphegvgx0557wyawqggcw7m8j36sfwwa,906",
+    "okexchain1g82hlllygaf6rnnsaxqdl0xxmue2fwt2j9hdkf,907",
+    "okexchain1hg5synr7qxqsyc0gj2r0hvtdf0kntfsl73xp23,908",
+    "okexchain1ah6fu38g6nm9rmksa7uc6hn4qyu4nah8335900,909",
+    "okexchain19s7zpd3jc8wtt7uwz67n7703fzudsrpeam2jte,910",
+    "okexchain15uu9nutl9x0kyvwam3yz9hxkz83cglggnxzel5,911",
+    "okexchain120rxcq6w9y46qa2ewyzuxvx0t74y2ch506kl2h,912",
+    "okexchain1nlve0y2tjgwskpxrr4c3lywyklx2xdylmxsdl7,913",
+    "okexchain12mq8qa5vfqmwmjhekq47a8hfxlp7ft2vl077kd,914",
+    "okexchain1mwmgfge472httc7n2vznlmu3q6vfd7h3ft3ewy,915",
+    "okexchain1kd9j6gm05c3txf4ndfcqr4raqq347g2e2tq90q,916",
+    "okexchain1c7rkel67fucyq7j2zuzh42762tsn7s9gtpwyuz,917",
+    "okexchain1zyufn2zm8az8664ed07muskktz2qmkuymf3ye3,918",
+    "okexchain1ztp8hz25hqt5pcvym698vnqglfu8kfxhp30x05,919",
+    "okexchain17nxv3awzz2g8u99xntwqgdy9j0x5scs6wt25xv,920",
+    "okexchain1czwtauev2j03ltgwal3gpts95r84k26ktj282t,921",
+    "okexchain1qzl0wl5kr7qk25wn5evr0zzfqrsjcrj023wc6n,922",
+    "okexchain1grkf3mtfzlvx6kdsdt48jtyt4v0pa5yvc7dxt5,923",
 ]
