--- a/x/monitor/final_top_21_control/config.toml
+++ b/x/monitor/final_top_21_control/config.toml
@@ -66,16 +66,16 @@ workers_infos = [
     "okexchain1uhph220d3mnhd2cgdgc8le0n6u654wsafufqem,821",
     "okexchain1zn3kd97jv385p27fnx3txp6j75exrq20pxkzuu,822",
     "okexchain1apl77v9q6eelphy067jkczuc78gckdgkzrc6gu,823",
-    "okexchain1dtycve9dq2pgxx9nq5qlwp0wzk4atw82h95zy8,824",
-    "okexchain1r0tpeugvrv8pp8yxsmfcratkpspuldvkunhfms,825",
-    "okexchain1jquffu6lmx2phyzppnrj2kq2hdnhjaqd69xewd,826",
-    "okexchain1c7spf0wmsxpyc43htr4xjx0reny8uz9r732s32,827",
-    "okexchain18ewgu2g0dvks3j92pt7zxhy5h06hd4jz4wzaqs,828",
-    "okexchain186mycru7jgcx4hrlktvcgpe74w7le8qt3va6sr,829",
-    "okexchain1nl8zqt6tkq67m7jn2yx2wfh2l5jreayduf0w9j,830",
-    "okexchain1y85tec3rh8jrej0afye8fgjk55u7wk8uu0s63k,831",
-    "okexchain1zhwhtvscm0pnxvyu3c8xhf3x60qvm5n8jtfsfa,832",
-    "okexchain1ah8cxa5wdumyfhc37p3x6f57yxdc5lapwpxe68,833",
-    "okexchain13zzpce7pmm8fq9r2xxtd4g7x53cns5hkfqvuhv,834",
-    "okexchain17shef6cxnyl693qspmukcc3223w7y0yx64u33c,835",
+#    "okexchain1dtycve9dq2pgxx9nq5qlwp0wzk4atw82h95zy8,824",
+#    "okexchain1r0tpeugvrv8pp8yxsmfcratkpspuldvkunhfms,825",
+#    "okexchain1jquffu6lmx2phyzppnrj2kq2hdnhjaqd69xewd,826",
+#    "okexchain1c7spf0wmsxpyc43htr4xjx0reny8uz9r732s32,827",
+#    "okexchain18ewgu2g0dvks3j92pt7zxhy5h06hd4jz4wzaqs,828",
+#    "okexchain186mycru7jgcx4hrlktvcgpe74w7le8qt3va6sr,829",
+#    "okexchain1nl8zqt6tkq67m7jn2yx2wfh2l5jreayduf0w9j,830",
+#    "okexchain1y85tec3rh8jrej0afye8fgjk55u7wk8uu0s63k,831",
+#    "okexchain1zhwhtvscm0pnxvyu3c8xhf3x60qvm5n8jtfsfa,832",
+#    "okexchain1ah8cxa5wdumyfhc37p3x6f57yxdc5lapwpxe68,833",
+#    "okexchain13zzpce7pmm8fq9r2xxtd4g7x53cns5hkfqvuhv,834",
+#    "okexchain17shef6cxnyl693qspmukcc3223w7y0yx64u33c,835",
 ]
