--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,20 @@
 ############# mainnet #############
+#hosts = [
+#    "http://okexchain-rpc1.okexcn.com:26657",
+#    "http://okexchain-rpc2.okexcn.com:26657",
+#]
+#
+#chain-id = "okexchain-66"
+
+############# testnet #############
 hosts = [
-    "http://okexchain-rpc1.okexcn.com:26657",
-    "http://okexchain-rpc2.okexcn.com:26657",
+    "http://18.163.7.245:26657",
+    "http://18.162.213.211:26657",
+    "http://18.163.7.245:26657",
+    "http://18.181.169.88:26657"
 ]
 
-chain-id = "okexchain-66"
+chain-id = "okexchain-65"
 
 ############# stable test #############
 #hosts = [
