--- a/config.toml
+++ b/config.toml
@@ -1,45 +1,41 @@
-############# testnet #############
-#hosts = [
-#    "http://18.167.142.95:26657",
-#    "http://18.167.77.79:26657",
-#    "http://18.167.136.23:26657",
-#    "http://18.166.232.162:26657",
-#    "http://18.167.133.255:26657",
-#    "http://18.166.181.170:26657",
-#     "http://18.163.54.130:26657",
-#    "http://18.167.164.175:26657",
-#    "http://18.166.240.67:26657",
-#    "http://18.162.176.55:26657",
-#]
+[networks]
+  ############# testnet-aws #############
+  [networks.testnet-aws]
+  hosts = [
+      "http://18.167.142.95:26657",
+      "http://18.167.77.79:26657",
+      "http://18.167.136.23:26657",
+      "http://18.166.232.162:26657",
+      "http://18.167.133.255:26657",
+      "http://18.166.181.170:26657",
+      "http://18.163.54.130:26657",
+      "http://18.167.164.175:26657",
+      "http://18.166.240.67:26657",
+      "http://18.162.176.55:26657",
+  ]
 
-#chain-id = "okexchain-65"
+  chain-id = "okexchain-65"
 
-############# testnet #############
-hosts = [
-    "https://exchaintesttmrpc.okex.org",
-]
+  ############# testnet-ali #############
+  [networks.testnet-ali]
+  hosts = [
+      "https://exchaintesttmrpc.okex.org",
+  ]
 
-chain-id = "okexchain-65"
+  chain-id = "okexchain-65"
 
-############# stable test #############
-#hosts = [
-#    "http://10.0.240.23:20057", "http://10.0.240.23:20157", "http://10.0.240.23:20257",
-#    "http://10.0.240.24:20057", "http://10.0.240.24:20157", "http://10.0.240.24:20257",
-#    "http://10.0.240.25:20057", "http://10.0.240.25:20157", "http://10.0.240.25:20257",
-#    "http://10.0.240.26:20057", "http://10.0.240.26:20157", "http://10.0.240.26:20257",
-#    "http://10.0.240.27:20057", "http://10.0.240.27:20157", "http://10.0.240.27:20257",
-#    "http://10.0.240.28:20057", "http://10.0.240.28:20157", "http://10.0.240.28:20257",
-#    "http://10.0.240.29:20057", "http://10.0.240.29:20157", "http://10.0.240.29:20257",
-#    "http://10.0.240.30:20057", "http://10.0.240.30:20157", "http://10.0.240.30:20257",
-#    "http://10.0.240.31:20057", "http://10.0.240.31:20157", "http://10.0.240.31:20257",
-#    "http://10.0.240.32:20057", "http://10.0.240.32:20157", "http://10.0.240.32:20257",
-#]
-#
-#chain-id = "okexchain-66"
+  ############# mainnet-ali #############
+  [networks.mainnet-ali]
+  hosts = [
+      "https://exchaintmrpc.okex.org",
+  ]
 
-############# local test #############
-#hosts = [
-#    "http://localhost:26657",
-#]
-#
-#chain-id = "okexchainevm-8"
+  chain-id = "exchain-66"
+
+  ############# local #############
+  [networks.local]
+  hosts = [
+      "http://localhost:26657",
+  ]
+
+  chain-id = "exchainevm-8"
